# mcp-installer

./: .gitignore  CHANGELOG.md  README.md  REVIEW.md  build.spec  installer.py  requirements.txt
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml
agents/fabric/: cicd-engineer.md  data-engineer.md  dax-analyst.md  sql-analyst.md  translator.md
assets/: gen_icon.py
azure-sql/: pyproject.toml
azure-sql/azure_sql_mcp/: server.py
fabric-core/: fabric_mcp.py  fabric_mcp_stdio.py  pyproject.toml
fabric-core/helpers/clients/: fabric_client.py
fabric-core/helpers/utils/: authentication.py  context.py
fabric-core/tools/: __init__.py  notebook.py
mcp_installer/: __init__.py  __main__.py  app.py  config_writer.py  constants.py  downloader.py  path_manager.py  prereqs.py  updater.py
powerbi-modeling/: pyproject.toml
powerbi-modeling/powerbi_modeling_mcp/: __init__.py  __main__.py  connection.py  discovery.py  dll_resolver.py  metadata.py  server.py  tmdl.py  translations.py
skills/fabric-toolkit/: TOOL_REFERENCE.md  TRANSLATION_GUIDE.md
templates/: CLAUDE.md
tests/: test_config_writer.py  test_downloader.py  test_path_manager.py  test_updater.py
translation-audit/: pyproject.toml
